--- a/unibot_project/custom_admin/templates/custom_admin/base.html
+++ b/unibot_project/custom_admin/templates/custom_admin/base.html
@@ -32,18 +32,18 @@
     <div class="layout">
      <aside class="sidebar">
   <div class="menu-title">المحتوى</div>
-  <a class="menu-link" href="{% url 'custom_admin:events_list' %}">الأحداث</a>
-  <a class="menu-link" href="{% url 'custom_admin:categories_list' %}">الفئات</a>
-  <a class="menu-link" href="{% url 'custom_admin:faqs_list' %}">الأسئلة الشائعة</a>
-  <a class="menu-link" href="{% url 'custom_admin:favorites_list' %}">المفضلات</a>
-  <a class="menu-link" href="{% url 'custom_admin:feedback_list' %}">التعليقات</a>
-  <a class="menu-link" href="{% url 'custom_admin:users_list' %}">المستخدمون</a>
-  <a class="menu-link" href="{% url 'custom_admin:kb_list' %}">Knowledge bases</a>
+<a class="menu-link" href="{% url 'custom_admin:events_list' %}">الأحداث</a>
+<a class="menu-link" href="{% url 'custom_admin:categories_list' %}">الفئات</a>
+<a class="menu-link" href="{% url 'custom_admin:faqs_list' %}">الأسئلة الشائعة</a>
+<a class="menu-link" href="{% url 'custom_admin:favorites_list' %}">المفضلات</a>
+<a class="menu-link" href="{% url 'custom_admin:feedbacks_list' %}">التعليقات</a>
+<a class="menu-link" href="{% url 'custom_admin:users_list' %}">المستخدمون</a>
+<a class="menu-link" href="{% url 'custom_admin:kb_list' %}">Knowledge bases</a>
 
-  <div class="menu-title" style="margin-top:14px">روابط</div>
-  <a class="menu-link" href="{% url 'custom_admin:dashboard' %}">لوحة التحكم</a>
-  <a class="menu-link" href="/admin/password_change/">تغيير كلمة المرور</a>
-  <a class="menu-link" href="/admin/logout/">تسجيل الخروج</a>
+<!-- روابط عامة -->
+<a class="menu-link" href="{% url 'custom_admin:dashboard' %}">لوحة التحكم</a>
+<a class="menu-link" href="/admin/password_change/">تغيير كلمة المرور</a>
+<a class="menu-link" href="/admin/logout/">تسجيل الخروج</a>
 </aside>
 
       <main class="content">
